# crypto-clob

./: Cargo.toml
src/: consolidator.rs  main.rs  order_book.rs
src/exchanges/: binance.rs  kraken.rs  mod.rs
test/: orderbooktest.py
